UI Compatibility Changes

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -20,6 +20,7 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_width="match_parent"
             app:layout_collapseMode="pin"
+            app:logo="@mipmap/infobits"
             android:title="@string/Login"
             android:textColor="#FFF"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -37,46 +38,31 @@
         android:id="@+id/CommForm">
 
 
-        <RelativeLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ddd"
-            android:padding="10dp"
-            android:id="@+id/bookLayout">
-
-
-        </RelativeLayout>
-
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Reset Password"
-            android:textColor="#001589"
-            android:textSize="20dp"
+            android:textColor="@color/colorPrimaryDark"
             android:backgroundTint="@color/colorPrimaryDark"
             android:id="@+id/bt_reset"
             style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:layout_marginTop="128dp"
             android:onClick="OnClick_reset"
-            android:layout_below="@+id/header"
-            android:layout_centerHorizontal="true" />
+            android:layout_below="@+id/input_mail"
+            android:layout_centerHorizontal="true"
+            android:textSize="20dp" />
 
         <EditText
-            android:layout_width="350dp"
-            android:layout_height="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/input_mail"
             android:layout_gravity="right"
             android:textColor="@color/colorPrimaryDark"
             android:background="#fff"
-            android:layout_marginTop="25dp"
-            android:layout_marginRight="7dp"
             android:padding="5dp"
             android:textSize="25sp"
-            android:hint="Enter your Bitsmail"
-            android:layout_below="@+id/bookLayout"
+            android:hint="Enter Your BITS Email"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_margin="20dp" />
 
 
     </RelativeLayout>
