--- a/app/src/main/res/layout/custom_fragmet.xml
+++ b/app/src/main/res/layout/custom_fragmet.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="bottom">
 
     <TextView
         android:layout_width="fill_parent"
@@ -22,11 +23,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/newArrivalsGrid"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center_horizontal|bottom"
         android:numColumns="4"
         android:background="@drawable/banner"
         android:scrollIndicators="left|right"
-        android:nestedScrollingEnabled="true" />
+        android:nestedScrollingEnabled="true"
+        android:gravity="bottom" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
