--- a/app/src/main/res/layout/newssearch.xml
+++ b/app/src/main/res/layout/newssearch.xml
@@ -11,10 +11,12 @@
         android:spinnersShown="true"
         android:datePickerMode="spinner"
         android:calendarViewShown="false"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/startDateText"
-        android:layout_marginTop="10dp" />
+        android:layout_alignTop="@+id/startDateText"
+        android:layout_toRightOf="@+id/startDateText"
+        android:background="#fff"
+        android:yearListSelectorColor="@color/colorPrimaryDark"
+        android:layoutMode="clipBounds"
+        android:calendarTextColor="@color/colorPrimaryDark" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,10 +26,9 @@
         android:id="@+id/startDateText"
         android:textColor="#211d70"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/startDatePicker"
-        android:layout_alignStart="@+id/startDatePicker"
-        android:textSize="18sp"
-        android:layout_marginLeft="6dp" />
+        android:textSize="15sp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,26 +38,10 @@
         android:id="@+id/endDateText"
         android:textColor="#211d70"
         android:layout_below="@+id/startDatePicker"
-        android:layout_alignLeft="@+id/endDatePicker"
-        android:layout_alignStart="@+id/endDatePicker"
-        android:textSize="18sp"
+        android:layout_alignLeft="@+id/startDateText"
+        android:textSize="15sp"
         android:layout_marginLeft="6dp"
-        android:layout_marginTop="-6dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/keywords"
-        android:layout_below="@+id/endDatePicker"
-        android:hint="Keywords"
-        android:textSize="20sp"
-        android:textColor="#211d70"
-        android:background="#fff"
-        android:padding="5dp"
-        android:layout_alignRight="@+id/endDatePicker"
-        android:layout_alignEnd="@+id/endDatePicker"
-        android:layout_alignLeft="@+id/endDatePicker"
-        android:layout_alignStart="@+id/endDatePicker" />
+        android:layout_marginRight="6dp" />
 
     <DatePicker
         android:layout_width="wrap_content"
@@ -65,8 +50,23 @@
         android:spinnersShown="true"
         android:datePickerMode="spinner"
         android:calendarViewShown="false"
-        android:layout_below="@+id/startDatePicker"
-        android:layout_alignParentRight="true" />
+        android:layout_toRightOf="@+id/startDateText"
+        android:layout_alignTop="@+id/endDateText"
+        android:background="#fff" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/keywords"
+        android:hint="Keywords"
+        android:textSize="15sp"
+        android:textColor="#211d70"
+        android:background="#fff"
+        android:padding="5dp"
+        android:layout_below="@+id/endDatePicker"
+        android:layout_toRightOf="@+id/startDateText"
+        android:layout_alignRight="@+id/startDatePicker"
+        android:layout_marginTop="6dp" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -77,9 +77,8 @@
         android:background="@color/colorPrimary"
         android:padding="10dp"
         android:onClick="getSearchNews"
+        android:layout_alignRight="@+id/keywords"
         android:layout_below="@+id/keywords"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="5dp" />
+        android:layout_marginTop="5dp" />
 
 </RelativeLayout>
