--- a/app/src/main/res/layout/activity_cover.xml
+++ b/app/src/main/res/layout/activity_cover.xml
@@ -6,10 +6,9 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/imageView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
+        android:src="@drawable/cover"
         android:scaleType="centerCrop"
-        android:src="@drawable/cover" />
+        android:layout_centerHorizontal="true" />
 
     <ProgressBar
         android:id="@+id/progressBar"
