--- a/app/src/main/res/layout/book_of_the_week.xml
+++ b/app/src/main/res/layout/book_of_the_week.xml
@@ -3,27 +3,31 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:padding="5dp"
-        android:background="#eee">
+        android:background="#eee"
+        android:layout_centerInParent="true">
 
         <ImageView
-            android:layout_width="125dp"
-            android:layout_height="158dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/book"
-            android:scaleType="fitXY"
-            android:layout_margin="10dp" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/info"
+            android:focusable="true"
+            android:layout_toLeftOf="@+id/book_of_the_week"
+            android:layout_alignBottom="@+id/reserve"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentLeft="true" />
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="100dp"
+            android:layout_width="180dp"
+            android:layout_height="90dp"
             android:id="@+id/book_of_the_week"
             android:src="@drawable/book_of_the_week"
-            android:scaleType="fitXY"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="10dp" />
+            android:scaleType="fitCenter"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentRight="true" />
 
         <Button
             android:layout_width="wrap_content"
@@ -37,7 +41,8 @@
             android:layout_alignRight="@+id/book_of_the_week"
             android:layout_alignEnd="@+id/book_of_the_week"
             android:textColor="#211d70"
-            android:textSize="16dp" />
+            android:textSize="15sp"
+            android:layout_marginTop="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,9 +52,9 @@
             android:layout_below="@+id/reserve"
             android:layout_alignLeft="@+id/book"
             android:layout_alignStart="@+id/book"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textColor="@color/colorPrimaryDark"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -59,8 +64,8 @@
             android:textColor="@color/colorPrimaryDark"
             android:layout_below="@+id/title"
             android:layout_alignLeft="@+id/title"
-            android:layout_marginTop="10dp"
-            android:textSize="18sp" />
+            android:layout_marginTop="5dp"
+            android:textSize="15sp" />
 
         <ProgressBar
             android:layout_width="wrap_content"
