--- a/app/src/main/res/layout/daily_news_notice.xml
+++ b/app/src/main/res/layout/daily_news_notice.xml
@@ -2,52 +2,55 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="106dp"
-        android:id="@+id/news"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:src="@drawable/daily_news_notice" />
-
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/news"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#eee">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/news1"
-            android:textColor="#211d70"
-            android:layout_alignParentTop="true"
-            android:textSize="15sp"
-            android:padding="3dp" />
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical" android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/news2"
-            android:textColor="#211d70"
-            android:layout_below="@+id/news1"
-            android:textSize="15sp"
-            android:padding="3dp" />
+            <ImageView
+                android:layout_width="320dp"
+                android:layout_height="80dp"
+                android:id="@+id/news"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:src="@drawable/daily_news_notice" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/news3"
-            android:textColor="#211d70"
-            android:layout_below="@+id/news2"
-            android:textSize="15sp"
-            android:padding="3dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/news1"
+                android:textColor="#211d70"
+                android:textSize="15sp"
+                android:padding="3dp"
+                android:layout_below="@+id/news" />
 
-    </RelativeLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/news2"
+                android:textColor="#211d70"
+                android:layout_below="@+id/news1"
+                android:textSize="15sp"
+                android:padding="3dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/news3"
+                android:textColor="#211d70"
+                android:layout_below="@+id/news2"
+                android:textSize="15sp"
+                android:padding="3dp" />
+
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
