--- a/app/src/main/res/layout/swipe_image.xml
+++ b/app/src/main/res/layout/swipe_image.xml
@@ -3,14 +3,12 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:layout_marginTop="0dp"
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/image_view"
 
-        android:layout_marginLeft="0dp"
-        android:padding="0dp"
         android:scaleType="fitCenter"
-        android:layout_centerInParent="true" />
+        android:src="@drawable/cover"
+        android:background="#eee" />
 
 </RelativeLayout>
